# automatic-meme

./: .gitignore  CMakeLists.txt
mainWindow/: mainWindow.cc  mainWindow.hh
